template-cicd.yml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: cicd
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: cicd
  labels:
    app: jenkins
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      containers:
      - name: jenkins
        image: jenkins:latest
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 1500m
            memory: 2Gi
          requests:
            cpu: 700m
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 360
          timeoutSeconds: 180
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /
            port: 80
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 180
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: cicd
spec:
  selector:
    app: jenkins
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
# Ingress Resource
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins-ingress
  namespace: cicd
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host:
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-service
          servicePort: 80
